# StudyRust

./: README.md
actix-application/: Cargo.toml
actix-application/src/: garden.rs  libs.rs  main.rs
actix-basics/: Cargo.toml
actix-basics/src/: main.rs
bakery-backend/: .env  Cargo.toml
bakery-backend/migration/src/: lib.rs
bakery-backend/src/: main.rs
cafe-bakery/: Cargo.toml
comm/: .env  Cargo.toml
comm/entity/: Cargo.toml
comm/entity/src/: libs.rs  member_info.rs  mod.rs  prelude.rs
comm/migration/src/: lib.rs  m20220101_000001_create_memberinfo.rs
comm/src/: main.rs
guessing_game/src/: main.rs
hello_cargo/src/: control_flow.rs  data_type.rs  main.rs  references.rs  structs.rs  structs_rectangle.rs
hello_world/: main  main.rs
sea-orm/: .env  Cargo.toml
sea-orm/entity/: Cargo.toml
sea-orm/entity/src/: cake.rs  cake_filling.rs  filling.rs  fruit.rs  lib.rs  mod.rs  prelude.rs
sea-orm/src/: libs.rs  main.rs
