[package]
name = "actix-basics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde_urlencoded = "0.7"
serde = { version = "1.0", features = ["derive"] }
futures = { version = "0.3", default-features = false }
serde_json = "1"
