[package]
name = "comm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
entity = { path = "entity" }
migration = { path = "migration" }
actix-web = "4"

log = "0.4.20"

sea-orm = { version = "^0.12.0", features = [ "debug-print", "sqlx-mysql", "runtime-async-std-native-tls", "macros" ] }
serde = { version = "1.0", features = ["derive"] }

