[package]
name = "sea-orm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
entity = { path = "entity" }
actix-web = "4"
sea-orm = { version = "0.12", features = ["debug-print", "runtime-tokio-native-tls", "sqlx-mysql", "macros" ] }
log = "0.4.20"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tracing = { version = "0.1" }

