[package]
name = "entity"
version = "0.1.0"
edition = "2021"
publish = false


[lib]
name = "entity"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }

sea-orm = { version = "0.12", features = ["debug-print", "runtime-tokio-native-tls", "sqlx-mysql", "macros" ] }
